         on client side.
         Reported by Gabriel Pulido.
       - Fixed parsing of Feed using the Rome extension.
         Reported by Andy Dennie.
       - Allowed multiple cookies set at once for JAX-RS.
         Reported and contributed by Grzegorz Godlewski.
       - Fixed formatting of expires cookie setting value.
         Reported and contributed by Grzegorz Godlewski.
              
    - API changes
       - Added Resource#getQueryValue(String) and setQueryValue(String,
         String) shortcut methods.
       - Moved Client#handle(Request) method to Restlet class.
       - Added Resource#getQueryValue(String), getAttribute(String),
         setQueryValue(String, String) and setAttribute(String, String)
         shortcut methods.
       - Moved Client#handle(...) methods to parent Restlet class.
       - Context#clientDispatcher and serverDispatcher are now Restlet
         instead of Client. Needed to fix URI template resolution
         in simple ClientResource instances.
       - Added ClientResource#accept(...) shortcut methods.
    - Misc
        - Updated FreeMarker library to version 2.3.19.

- 2.1 Release Candidate 3 (02/15/2012)
    - Bug fixed
       - Fixed Guice Maven group ID. Reported by Kristoffer Gronowski.
       - Relaxed content type header parsing in case of a trailing 
         semicolon. Reported by Jean-Baptiste Dusseaut.

- 2.1 Release Candidate 2 (01/15/2012)
    - Bug fixed
       - Fixed the JAX-RS extension that did not introspect the 
         interfaces and parent classes of resource classes.
         Reported and contributed by Shaun Elliott.
       - On the client-side, a challenge response with a raw value 
         defined wasn't taken into account if a helper was missing.
         Refactored engine's AuthenticatorHelper to move common 
         logic to the AuthenticatorUtils class.
         Reported by Alex Milowski.
       - Fixed POM dependency on Apache HTTP Client 4.1.1.
         Reported by Dejan Lozanovic.